--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
   <div class="options">
     <p>Liberty</p>
     <div class="btns">
-     <a href="" target = _blank> <button id="btn-0">Xeno</button></a>  
-     <a href="" target = _blank> <button id="btn-0">Lane Hackers</button></a>
-     <a href="" target = _blank> <button id="btn-0">Ageira</button></a>  	 
-     <a href="" target = _blank> <button id="btn-0">Cryer</button></a>  	 
+     <a href="ships/xeno.html" target = _blank> <button id="btn-0">Xeno</button></a>  
+     <a href="ships/lane.html" target = _blank> <button id="btn-0">Lane Hackers</button></a>
+     <a href="ships/ageira.html" target = _blank> <button id="btn-0">Ageira</button></a>  	 
+     <a href="ships/cryer.html" target = _blank> <button id="btn-0">Cryer</button></a>  	 
 
 
     </div>
@@ -38,27 +38,25 @@
   <div class="options2">
     <p>Bretonia</p>
     <div class="btns">
-     <a href="" target = _blank> <button id="btn-0">Gaians</button></a>  
-	 <a href="" target = _blank> <button id="btn-0">Red Sails</button></a>  
-     <a href="" target = _blank> <button id="btn-0">Mollies</button></a>  
-	 <a href="" target = _blank> <button id="btn-0">Button</button></a>  
+     <a href="ships/gaian.html" target = _blank> <button id="btn-0">Gaians</button></a>  
+     <a href="ships/mol.html" target = _blank> <button id="btn-0">Mollies</button></a>  
 
     </div>
 
   <div class="options3">
     <p>Kusari</p>
     <div class="btns">
-     <a href="" target = _blank> <button id="btn-0">Blood Dragons</button></a>  
-     <a href="" target = _blank> <button id="btn-0">Golden Chrysanthemums</button></a>    
-	 <a href="" target = _blank> <button id="btn-0">Hogosha</button></a>  
+     <a href="ships/dragons.html" target = _blank> <button id="btn-0">Blood Dragons</button></a>  
+     <a href="ships/golden.html" target = _blank> <button id="btn-0">Golden Chrysanthemums</button></a>    
+	 <a href="ships/hogosha.html" target = _blank> <button id="btn-0">Hogosha</button></a>  
 
     </div>
 
   <div class="options4">
     <p>Rheinland</p>
     <div class="btns">
-     <a href="" target = _blank> <button id="btn-0">Hessian</button></a>  
-     <a href="" target = _blank> <button id="btn-0">Sons of Ymir</button></a>    
+     <a href="ships/hes.html" target = _blank> <button id="btn-0">Hessian</button></a>  
+     <a href="ships/ymir.html" target = _blank> <button id="btn-0">Sons of Ymir</button></a>    
 	 <a href="" target = _blank> <button id="btn-0">Military</button></a>  
 
     </div>
@@ -67,19 +65,28 @@
     <p>Edge Worlds</p>
     <div class="btns">
      <a href="" target = _blank> <button id="btn-0">Corsairs</button></a>  
-     <a href="" target = _blank> <button id="btn-0">Outcasts</button></a>    
+     <a href="ships/oc.html" target = _blank> <button id="btn-0">Outcasts</button></a>    
 
     </div>
 
+  <div class="options5">
+    <p>Inner Worlds</p>
+    <div class="btns">
+	 <a href="ships/redsails.html" target = _blank> <button id="btn-0">Red Sails</button></a>  
+     <a href="ships/junker.html" target = _blank> <button id="btn-0">Junkers</button></a>  
+     <a href="ships/gmg.html" target = _blank> <button id="btn-0">Gas Miner's Guild</button></a>  
+	 
+
+    </div>
 
   <div class="options6">
     <p>Civilian and Generic</p>
     <div class="btns">
-     <a href="" target = _blank> <button id="btn-0">Starter</button></a>  	
-     <a href="" target = _blank> <button id="btn-0">Pirate</button></a>  
-     <a href="" target = _blank> <button id="btn-0">Edge Worlds</button></a>   
-	 <a href="" target = _blank> <button id="btn-0">Core Worlds</button></a>    
-	 <a href="" target = _blank> <button id="btn-0">Medical Ships</button></a>  	
+     <a href="ships/starter.html" target = _blank> <button id="btn-0">Starter</button></a>  	
+     <a href="ships/pirate.html" target = _blank> <button id="btn-0">Pirate</button></a>  
+     <a href="ships/edge.html" target = _blank> <button id="btn-0">Edge Worlds</button></a>   
+	 <a href="ships/core.html" target = _blank> <button id="btn-0">Core Worlds</button></a>    
+	 <a href="" target = _blank> <button id="btn-0">Research Ships</button></a>  	
 	 <a href="" target = _blank> <button id="btn-0">Luxury Ships</button></a>  
     </div>
 
