--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
      <a href="ships/pirate.html" target = _blank> <button id="btn-0">Pirate</button></a>  
      <a href="ships/edge.html" target = _blank> <button id="btn-0">Edge Worlds</button></a>   
 	 <a href="ships/core.html" target = _blank> <button id="btn-0">Core Worlds</button></a>    
-	 <a href="" target = _blank> <button id="btn-0">Research Ships</button></a>  	
+	 <a href="ships/research.html" target = _blank> <button id="btn-0">Research Ships</button></a>  	
 	 <a href="" target = _blank> <button id="btn-0">Luxury Ships</button></a>  
     </div>
 
