--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <div class="options">
     <p>Liberty</p>
     <div class="btns">
+     <a href="ships/navy.html" target = _blank> <button id="btn-0">Navy</button></a>  	
      <a href="ships/xeno.html" target = _blank> <button id="btn-0">Xeno</button></a>  
      <a href="ships/lane.html" target = _blank> <button id="btn-0">Lane Hackers</button></a>
      <a href="ships/ageira.html" target = _blank> <button id="btn-0">Ageira</button></a>  	 
@@ -38,6 +39,7 @@
   <div class="options2">
     <p>Bretonia</p>
     <div class="btns">
+     <a href="ships/bret.html" target = _blank> <button id="btn-0">Armed Forces</button></a>  
      <a href="ships/gaian.html" target = _blank> <button id="btn-0">Gaians</button></a>  
      <a href="ships/mol.html" target = _blank> <button id="btn-0">Mollies</button></a>  
 
@@ -57,7 +59,7 @@
     <div class="btns">
      <a href="ships/hes.html" target = _blank> <button id="btn-0">Hessian</button></a>  
      <a href="ships/ymir.html" target = _blank> <button id="btn-0">Sons of Ymir</button></a>    
-	 <a href="" target = _blank> <button id="btn-0">Military</button></a>  
+	 <a href="ships/rhm.html" target = _blank> <button id="btn-0">Military</button></a>  
 
     </div>
 
