Added images to main showcase. Removed p3d.in

--- a/ShipUI/index.html
+++ b/ShipUI/index.html
@@ -25,7 +25,8 @@
         <div class="card">
             <div class="face face1">
                 <div class="content">
-                    <iframe allowfullscreen webkitallowfullscreen width="300" height="200" frameborder="0" seamless src="https://p3d.in/e/cZSEk"></iframe> 
+                 
+					 <img src="img/glf.png" alt="Gaian light fighter" >
                     <h3>Light Fighter</h3>
                 </div>
             </div>
@@ -39,7 +40,7 @@
         <div class="card">
             <div class="face face1">
                 <div class="content">
-                  <iframe allowfullscreen webkitallowfullscreen width="300" height="200" frameborder="0"  seamless src="https://p3d.in/e/GNmdv"></iframe> 
+                   <img src="img/ghf.png" alt="Gaian light fighter" >
                     <h3>Heavy Fighter</h3>
                 </div>
             </div>
@@ -53,7 +54,7 @@
         <div class="card">
             <div class="face face1">
                 <div class="content">
-                    <iframe allowfullscreen webkitallowfullscreen width="300" height="200" frameborder="0"seamless src="https://p3d.in/e/f4mNe"> </iframe> 
+                   <img src="img/ggb.png" alt="Gaian light fighter" >
                     <h3>Gunboat</h3>
                 </div>
             </div>
@@ -69,7 +70,7 @@
         <div class="card">
             <div class="face face1">
                 <div class="content">
-                    <iframe allowfullscreen webkitallowfullscreen width="300" height="200" frameborder="0" seamless src="https://p3d.in/e/7zZAB"></iframe> 
+                   <img src="img/hlf.png" alt="Gaian light fighter" >
                     <h3>Light Fighter</h3>
                 </div>
             </div>
@@ -83,7 +84,7 @@
         <div class="card">
             <div class="face face1">
                 <div class="content">
-                  <iframe allowfullscreen webkitallowfullscreen width="300" height="200" frameborder="0"  seamless src="https://p3d.in/e/F66lu"></iframe> 
+                   <img src="img/hhf.png" alt="Gaian light fighter" >
                     <h3>Heavy Fighter</h3>
                 </div>
             </div>
@@ -97,7 +98,7 @@
         <div class="card">
             <div class="face face1">
                 <div class="content">
-                    <iframe allowfullscreen webkitallowfullscreen width="300" height="200" frameborder="0"seamless src="https://p3d.in/e/8RoWQ"></iframe> 
+                   <img src="img/hgb.png" alt="Gaian light fighter" >
                     <h3>Gunboat</h3>
                 </div>
             </div>
