--- a/LoreMaster/index.html
+++ b/LoreMaster/index.html
@@ -58,7 +58,7 @@
          <li class="nav__item"><a href="#" class="nav__link "><span class="conversation-link   conversation-link--unread">
 						 <span class="conversation-link__element"> <span class="channel-link__icon"></span>Battleships</span></span></a></li>
 		<li class="nav__item"><a href="#" class="nav__link "><span class="conversation-link   conversation-link--unread">
-						 <span class="conversation-link__element"> <span class="channel-link__icon"></span>Tranaports</span></span></a></li>
+						 <span class="conversation-link__element"> <span class="channel-link__icon"></span>Transports</span></span></a></li>
 		<li class="nav__item"><a href="#" class="nav__link "><span class="conversation-link   conversation-link--unread">
 						 <span class="conversation-link__element"> <span class="channel-link__icon"></span>Freighters</span></span></a></li>
 						
