--- a/LoreMaster/index.html
+++ b/LoreMaster/index.html
@@ -27,7 +27,7 @@
 
       <div class="nav-section">
        <div class="nav-section__header">
-        <h2 class="nav-section__title">Houses</h2>
+        <h2 class="nav-section__title">Groups</h2>
        </div>
        <div class="nav-section__body">
         <ul class="nav">
@@ -36,7 +36,9 @@
          <li class="nav__item"><a href="#" class="nav__link "><span class="channel-link conversation-link--unread"><span class="channel-link__icon"></span><span class="channel-link__element">Kusari</span></span></a></li>
          <li class="nav__item"><a href="#" class="nav__link "><span class="channel-link conversation-link--unread"><span class="channel-link__icon"></span><span class="channel-link__element">Bretonia</span></span></a></li>
          <li class="nav__item"><a href="#" class="nav__link "><span class="channel-link conversation-link--unread"><span class="channel-link__icon"></span><span class="channel-link__element">Hispania</span></span></a></li>
-        </ul>
+         <li class="nav__item"><a href="#" class="nav__link "><span class="channel-link conversation-link--unread"><span class="channel-link__icon"></span><span class="channel-link__element">Inner Worlds</span></span></a></li>
+         <li class="nav__item"><a href="#" class="nav__link "><span class="channel-link conversation-link--unread"><span class="channel-link__icon"></span><span class="channel-link__element">Outer Worlds</span></span></a></li>
+	</ul>
        </div>
       </div>
       <div class="nav-section">
