--- a/LoreMaster/index.html
+++ b/LoreMaster/index.html
@@ -19,7 +19,15 @@
      <div class="app-header__anchor">
       <span class="app-header__anchor__text">Aftermath Technologies</span>
      </div>
-     <div></div>
+	 
+      <ul class="nav">
+   <li class="nav__item"><a class="nav__link " href="#"><span class="nav__link__element">Home</span></a></li>
+   <li class="nav__item"><a class="nav__link " href="#"><span class="nav__link__element">Updates</span><span class="nav__link__element"></span></a></li>
+   <li class="nav__item"><a class="nav__link " href="#"><span class="nav__link__element">Wiki</span></a></li>
+   <li class="nav__item"><a class="nav__link " href="#"><span class="nav__link__element">Moddb</span></a></li>
+   <li class="nav__item"><a class="nav__link " href="#"><span class="nav__link__element">Files</span></a></li>   
+   <li class="nav__item"><a class="nav__link " href="#"><span class="nav__link__element">Discord</span></a></li>
+  </ul>
     </header>
     <div class="app-container">
      <div class="app-a">
@@ -212,16 +220,13 @@
 	 
 	       <div class="nav-section">
        <div class="nav-section__header">
-        <h2 class="nav-section__title">Aftermath</h2>
+        <h2 class="nav-section__title">Daily Hightlight</h2>
        </div>
        <div class="nav-section__body">
         <ul class="nav">
-         <li class="nav__item"><a href="#" class="nav__link nav__link--active"><span class="channel-link conversation-link--unread"><span class="channel-link__icon"></span><span class="channel-link__element">Wiki</span></span></a></li>
-         <li class="nav__item"><a href="#" class="nav__link "><span class="channel-link conversation-link--unread"><span class="channel-link__icon"></span><span class="channel-link__element">Forums</span></span></a></li>
-         <li class="nav__item"><a href="#" class="nav__link "><span class="channel-link conversation-link--unread"><span class="channel-link__icon"></span><span class="channel-link__element">Download</span></span></a></li>
-         <li class="nav__item"><a href="#" class="nav__link "><span class="channel-link conversation-link--unread"><span class="channel-link__icon"></span><span class="channel-link__element">Moddb</span></span></a></li>
-         <li class="nav__item"><a href="#" class="nav__link "><span class="channel-link conversation-link--unread"><span class="channel-link__icon"></span><span class="channel-link__element">Discord</span></span></a></li>
-        </ul>
+         <li class="nav__item"><span class="channel-link__element"><iframe allowfullscreen webkitallowfullscreen width="340" height="206" frameborder="0" seamless src="https://p3d.in/e/F66lu"></iframe></span></a></li>
+ 
+         </ul>
        </div>
       </div>	 
 	 
