--- a/LoreMaster/index.html
+++ b/LoreMaster/index.html
@@ -220,7 +220,7 @@
 	 
 	       <div class="nav-section">
        <div class="nav-section__header">
-        <h2 class="nav-section__title">Daily Hightlight</h2>
+        <h2 class="nav-section__title">Daily Highlight</h2>
        </div>
        <div class="nav-section__body">
         <ul class="nav">
