--- a/LoreMaster/index.html
+++ b/LoreMaster/index.html
@@ -8,10 +8,19 @@
   <link rel="stylesheet" href="wiki/normalize.css" /> 
   <link rel="stylesheet" href="wiki/css2_002.css" /> 
   <link rel="stylesheet" href="wiki/css2.css" />
-  <link rel="stylesheet" href="wiki/style.css" /> 
+<link id='style' rel='stylesheet' href='wiki/style.css' title='main'>
+<link id='style-alt' rel='alternate stylesheet' href='wiki/red.css' title='alt'>
+
+
+
  </head> 
  <body> 
+ 
+
   <!-- partial:index.partial.html --> 
+  
+
+  
   <div id="root">
   <div id="root">
    <div class="app-skeleton">
@@ -218,15 +227,18 @@
      </div>
      <div class="app-b">
 	 
-	       <div class="nav-section">
+	        <div class="nav-section">
        <div class="nav-section__header">
-        <h2 class="nav-section__title">Daily Highlight</h2>
+        <h2 class="nav-section__title">Placeholder</h2>
        </div>
        <div class="nav-section__body">
         <ul class="nav">
-         <li class="nav__item"><span class="channel-link__element"><iframe allowfullscreen webkitallowfullscreen width="340" height="206" frameborder="0" seamless src="https://p3d.in/e/F66lu"></iframe></span></a></li>
- 
-         </ul>
+         <li class="nav__item"><a href="#" class="nav__link "><span class="conversation-link   conversation-link--unread">
+						 <span class="conversation-link__element"><span class="channel-link__icon"></span>Placedholder</span></span></a></li>
+
+
+						
+        </ul>
        </div>
       </div>	 
 	 
@@ -252,7 +264,7 @@
      </div>
     </div>
    </div>
-  </div> 
+  </div>   
   <!-- partial --> 
   <script src="wiki/preact.js"></script>
   <script src="wiki/script.js"></script> 
