--- a/LoreMaster/index.html
+++ b/LoreMaster/index.html
@@ -75,6 +75,8 @@
          <li class="nav__item"><a href="#" class="nav__link "><span class="conversation-link   conversation-link--unread">
 						 <span class="conversation-link__element"> <span class="channel-link__icon"></span>Destroyers</span></span></a></li>
          <li class="nav__item"><a href="#" class="nav__link "><span class="conversation-link   conversation-link--unread">
+						 <span class="conversation-link__element"> <span class="channel-link__icon"></span>Cruisers</span></span></a></li>						 					 
+         <li class="nav__item"><a href="#" class="nav__link "><span class="conversation-link   conversation-link--unread">
 						 <span class="conversation-link__element"> <span class="channel-link__icon"></span>Battleships</span></span></a></li>
 		<li class="nav__item"><a href="#" class="nav__link "><span class="conversation-link   conversation-link--unread">
 						 <span class="conversation-link__element"> <span class="channel-link__icon"></span>Transports</span></span></a></li>
@@ -101,6 +103,8 @@
 						 <span class="conversation-link__element"> <span class="channel-link__icon"></span>Gunboat</span></span></a></li>
          <li class="nav__item"><a href="#" class="nav__link "><span class="conversation-link   conversation-link--unread">
 						 <span class="conversation-link__element"> <span class="channel-link__icon"></span>Corvette</span></span></a></li>
+         <li class="nav__item"><a href="#" class="nav__link "><span class="conversation-link   conversation-link--unread">
+						 <span class="conversation-link__element"> <span class="channel-link__icon"></span>Cruisers</span></span></a></li>
          <li class="nav__item"><a href="#" class="nav__link "><span class="conversation-link   conversation-link--unread">
 						 <span class="conversation-link__element"> <span class="channel-link__icon"></span>Destroyer</span></span></a></li>
          <li class="nav__item"><a href="#" class="nav__link "><span class="conversation-link   conversation-link--unread">
