--- a/PortalMaster/blog.html
+++ b/PortalMaster/blog.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Aftermath Lore</title>
+  <title>Aftermath Blog</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
@@ -12,7 +12,7 @@
 <nav>
   <li><a class="btn" href="index.html">Portal</a>
   <li><a class="btn" href="#">Forums</a>
-  <li><a class="btn" href="blog.html">Blog</a>  
+  <li><a class="btn" href="blog.html">Blog</a>   
   <li><a class="btn" href="#">Updates</a>
   <li><a class="btn" href="lore.html">Lore</a>
   <li><a class="btn" href="#">Wiki</a>
@@ -28,23 +28,21 @@
 <div class="block-wide">
   <div class="container">
   
-  <h2>Aftermath Lore</h2>
+  <h2>Aftermath Blog</h2>
 <hr>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
- Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
- Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<a href="#">link here</a></p>
-
+<p>Welcome to the Aftermath Blog Reel.</p>
+<p>Here you can check all the current and past blog posts.</p>
 <hr>
   
 <ul class="columns columns-4 services">
+
   <li>
-    <h4>Liberty</h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
- Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
- Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <a class="btn" href="files/liberty.html"><span>More info</span></a>
+  <p class="sub">Impyness</p>
+    <h4>Emerging factions</h4>
+    <p>Hello there everyone! It's time for another blog! Today we'll be going over the new factions in Aftermath. 
+	Due to the wish to keep things mostly vanilla and try to follow through with the time progression since we're trying to keep the amount of new factions somewhat low, however there are some cases where they are needed to fill a roleplay or gameplay niche. 
+	The two factions we'll be going over today are the Red Sails, a Bretonian based pirate faction and the Sons of Ymir, a Sigma / Omicron based unlawful group dedicated to going after the GMG and Corsairs.</p>
+    <a class="btn" href="blogs/ef/ef.html"><span>More info</span></a>
   </li>
   <li> 
     <h4>Rheinland</h4>
