--- a/PortalMaster/index.html
+++ b/PortalMaster/index.html
@@ -10,10 +10,12 @@
 <!-- partial:index.partial.html -->
 <div class="table">
 <nav>
-  <li><a class="btn" href="#">News</a>
+  <li><a class="btn" href="index.html">Portal</a>
   <li><a class="btn" href="#">Forums</a>
+  <li><a class="btn" href="blog.html">Blog</a> 
   <li><a class="btn" href="#">Updates</a>
-  <li><a class="btn" href="lore.html">Wiki</a>
+  <li><a class="btn" href="lore.html">Lore</a>
+  <li><a class="btn" href="#">Wiki</a>
   <li><a class="btn" href="#">Discord</a>
   <li><a class="btn" href="#">Youtube</a>
   <li><a class="btn" href="#">Twitch</a>
