--- a/PortalMaster/blog.html
+++ b/PortalMaster/blog.html
@@ -11,18 +11,16 @@
 <div class="table">
 <nav>
   <li><a class="btn" href="index.html">Portal</a>
-  <li><a class="btn" href="#">Forums</a>
+  <li><a class="btnr" href="#">Forums</a>
   <li><a class="btn" href="blog.html">Blog</a>   
-  <li><a class="btn" href="#">Updates</a>
+  <li><a class="btnr" href="#">Updates</a>
   <li><a class="btn" href="lore.html">Lore</a>
   <li><a class="btn" href="#">Wiki</a>
-  <li><a class="btn" href="#">Discord</a>
-  <li><a class="btn" href="#">Youtube</a>
-  <li><a class="btn" href="#">Twitch</a>
+  <li><a class="btn" href="about.html">About</a>   
 </nav>
 </div>
 
-
+&nbsp;
 
 
 <div class="block-wide">
@@ -104,6 +102,14 @@ Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliqu
 </ul>
     </div>
   </div>
+   &nbsp;
+ <div class="table">
+<nav>
+  <li><a class="btn" href="#">Discord</a>
+  <li><a class="btn" href="#">Youtube</a>
+  <li><a class="btn" href="#">Twitch</a>
+</nav>
+</div>  
 <!-- partial -->
   
 </body>
