--- a/PortalMaster/blogs/ef/ef.html
+++ b/PortalMaster/blogs/ef/ef.html
@@ -11,14 +11,12 @@
 <div class="table">
 <nav>
   <li><a class="btn" href="../../index.html">Portal</a>
-  <li><a class="btn" href="#">Forums</a>
+  <li><a class="btnr" href="#">Forums</a>
   <li><a class="btn" href="../../blog.html">Blog</a>   
-  <li><a class="btn" href="#">Updates</a>
+  <li><a class="btnr" href="#">Updates</a>
   <li><a class="btn" href="../../lore.html">Lore</a>
   <li><a class="btn" href="#">Wiki</a>
-  <li><a class="btn" href="#">Discord</a>
-  <li><a class="btn" href="#">Youtube</a>
-  <li><a class="btn" href="#">Twitch</a>
+  <li><a class="btn" href="../../about.html">About</a>   
 </nav>
 </div>
 
@@ -80,6 +78,14 @@ With the extra downtime between updates there should however be an increase in o
       <p class="sub">Impyness</p>
     </div>
   </div>
+   &nbsp;
+ <div class="table">
+<nav>
+  <li><a class="btn" href="#">Discord</a>
+  <li><a class="btn" href="#">Youtube</a>
+  <li><a class="btn" href="#">Twitch</a>
+</nav>
+</div>  
 <!-- partial -->
   
 </body>
