--- a/PortalMaster/files/liberty.html
+++ b/PortalMaster/files/liberty.html
@@ -11,14 +11,13 @@
 <div class="table">
 <nav>
   <li><a class="btn" href="../index.html">Portal</a>
-  <li><a class="btn" href="#">Forums</a>
+  <li><a class="btnr" href="#">Forums</a>
   <li><a class="btn" href="../blog.html">Blog</a> 
-  <li><a class="btn" href="#">Updates</a>
+  <li><a class="btnr" href="#">Updates</a>
   <li><a class="btn" href="../lore.html">Lore</a>
   <li><a class="btn" href="#">Wiki</a>
-  <li><a class="btn" href="#">Discord</a>
-  <li><a class="btn" href="#">Youtube</a>
-  <li><a class="btn" href="#">Twitch</a>
+  <li><a class="btn" href="../about.html">About</a>   
+
 </nav>
 </div>
 
@@ -166,6 +165,13 @@ Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliqu
 
  </div>
   </div>
+ <div class="table">
+<nav>
+  <li><a class="btn" href="#">Discord</a>
+  <li><a class="btn" href="#">Youtube</a>
+  <li><a class="btn" href="#">Twitch</a>
+</nav>
+</div> 
 <!-- partial -->
   
 </body>
