--- a/PortalMaster/files/regions/outer.html
+++ b/PortalMaster/files/regions/outer.html
@@ -2,31 +2,32 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Aftermath Lore</title>
-  <link rel="stylesheet" href="./style.css">
+  <title>Outer Worlds Lore</title>
+  <link rel="stylesheet" href="../../style.css">
 
 </head>
 <body>
 <!-- partial:index.partial.html -->
 <div class="table">
 <nav>
-  <li><a class="btn" href="index.html">Portal</a>
+  <li><a class="btn" href="../../index.html">Portal</a>
   <li><a class="btnr" href="#">Forums</a>
-  <li><a class="btn" href="blog.html">Blog</a>  
+  <li><a class="btn" href="../../blog.html">Blog</a> 
   <li><a class="btnr" href="#">Updates</a>
-  <li><a class="btn" href="lore.html">Lore</a>
+  <li><a class="btn" href="../../lore.html">Lore</a>
   <li><a class="btn" href="#">Wiki</a>
-   <li><a class="btn" href="about.html">About</a>  
+  <li><a class="btn" href="../../about.html">About</a>    
+
 </nav>
 </div>
 
 
-&nbsp;
+
 
 <div class="block-wide">
   <div class="container">
   
-  <h2>Aftermath Lore</h2>
+  <h2>Outer Worlds</h2>
 <hr>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
@@ -34,77 +35,136 @@ Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliqu
  Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<a href="#">link here</a></p>
 
 <hr>
+
+<div class="widjet">
+<h3 class="widget-title">Recent Events</h3>
+  <ul>
+  <li class="postclass clearfix">
+  <a class="recentpost_title" href="#">Post description with link</a>
+  <span class="recentpost_date">542 AS</span>
+    </li>
+  <li class="postclass clearfix">
+  <a class="recentpost_title" href="#">Post description with link</a>
+  <span class="recentpost_date">544 AS</span>
+    </li>
+  <li class="postclass clearfix">
+  <a class="recentpost_title" href="#">Post description with link</a>
+  <span class="recentpost_date">544 AS</span></li>
+
+  <li class="postclass clearfix">
+  <a class="recentpost_title" href="#">Post description with link</a>
+  <span class="recentpost_date">544 AS</span></li>
+	
+  <li class="postclass clearfix">
+  <a class="recentpost_title" href="#">Post description with link</a>
+  <span class="recentpost_date">544 AS</span></li>
+		
+	
+  </ul> 
   
-<ul class="columns columns-4 services">
+</div>
+<hr>
+<ul class="columnsr columnsr-4 services"> 
+
   <li>
-    <h4>Liberty</h4>
+    <h4>Liberty Navy</h4>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
  Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <a class="btn" href="files/regions/liberty.html"><span>More info</span></a>
+    <a class="btn" href="#"><span>More info</span></a>
   </li>
   <li> 
-    <h4>Rheinland</h4>
+    <h4>Liberty Police Incorporated</h4>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
  Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <a class="btn" href="files/regions/rheinland.html"><span>More info</span></a>
+    <a class="btn" href="#"><span>More info</span></a>
   </li>
   <li>
-    <h4>Kusari</h4>
+    <h4>Liberty Security Force</h4>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
  Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <a class="btn" href="files/regions/kusari.html"><span>More info</span></a>
+    <a class="btn" href="#"><span>More info</span></a>
   </li>
   <li>
-    <h4>Bretonia</h4>
+    <h4>Ageira Technologies</h4>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
  Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <a class="btn" href="files/regions/bretonia.html"><span>More info</span></a>
+    <a class="btn" href="#"><span>More info</span></a>
   </li>
   <li>
-    <h4>Outcasts</h4>
+    <h4>Interspace Commerce</h4>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
  Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <a class="btn" href="files/regions/outcast.html"><span>More info</span></a>
+    <a class="btn" href="#"><span>More info</span></a>
   </li>
   <li>
-    <h4>Corsairs</h4>
+    <h4>Cryer Pharmaceuticals</h4>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
  Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <a class="btn" href="files/regions/corsair.html"><span>More info</span></a>
+    <a class="btn" href="#"><span>More info</span></a>
   </li>
   <li>
-    <h4>Core Worlds</h4>
+    <h4>Synth Foods</h4>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
  Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <a class="btn" href="files/regions/core.html"><span>More info</span></a>
+    <a class="btn" href="#"><span>More info</span></a>
   </li>
   <li>
-    <h4>Outer Worlds</h4>
+    <h4>Orbital Spa & Cruise</h4>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
  Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <a class="btn" href="files/regions/outer.html"><span>More info</span></a>
+    <a class="btn" href="#"><span>More info</span></a>
   </li>
 
 </ul>
-    </div>
+ 
+<ul class="columnsr columnsr-4 servicesr"> 
+
+  <li>
+    <h5>Lane Hackers</h5>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+ Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+ Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <a class="btn2" href="#"><span>More info</span></a>
+  </li>
+  <li> 
+    <h5>Rogues</h5>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+ Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+ Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <a class="btn2" href="#"><span>More info</span></a>
+  </li>
+  <li>
+    <h5>Xenos</h5>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+ Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+ Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <a class="btn2" href="#"><span>More info</span></a>
+  </li>
+
+
+</ul>
+
+ </div>
   </div>
-   &nbsp;
  <div class="table">
 <nav>
   <li><a class="btn" href="#">Discord</a>
